crates/data-dict/tests/snapshots/validate_spec__s08_units_on_non_quantity.snap
---
source: crates/data-dict/tests/validate_spec.rs
expression: "failing_diagnostic(\"spec/s08-units-on-non-quantity.yaml\")"
---
Error: [S08] A column with `units` must have type `number(quantity)`.
    ╭─[ spec/s08-units-on-non-quantity.yaml:11:16 ]
    │
  7 │   races:
    │ 
  9 │       - name: finish_rank
    │ 
 11 │         units: place
    │                ──┬──  
    │                  ╰──── has `units` but has type `number(ordinal)`
────╯
